package openx;

// identification for single matching ad
message AdId {
  required int32 campaign_id          = 1;        // The campaign's ID.
  required int32 placement_id         = 2;        // The placement's ID
  required int32 creative_id          = 3;        // The creative's ID.
}

message BidRequest {
  // ------------------------------------------------------------------------
  // ***    REQUIRED FIELDS                                               ***
  // ------------------------------------------------------------------------
  // These fields are guaranteed to be set by the OpenX RTB system and passed
  // to the bidder in the bid request.
  // OPENX identifiers
  required int32 api_version         = 1;        // This value represents the
                                                 // version of the API the
                                                 // Market is using to
                                                  // communicate with the
                                                 // real-time bidder.
  required string auction_id         = 2;        // This is a unique value
                                                 // generated by the Market
                                                 // and used to identify the
                                                 // auction request.
  // ADVERTISER identifiers
  repeated AdId matching_ad_ids    = 3;        // list of ads which match
                                                 // for this request
  // PUBLISHER identifiers
  required string pub_website_id     = 4;        // The ID of the publisher'
                                                 // website
  // AD size
  required int32  ad_height          = 5;        // The height of the ad
                                                 // position to fill
  required int32  ad_width           = 6;        // The width of the ad
                                                 // position to fill
												 
  // ------------------------------------------------------------------------
  // ***    OPTIONAL FIELDS                                               ***
  // ------------------------------------------------------------------------
  // These fields are optional and may be set by the OpenX RTB system and
  // passed to the bidder in the bid request.
  // USER related fields
  optional string user_cookie_id     = 7;        // A unique ID representing the
                                                 // user.  To protect the user's
                                                 // identity this value is
                                                 // different for each bidder.
  optional bytes  user_ip_address    = 8;        // The IP address of the user
  optional int32  user_screen_height = 9;        // The height of the
                                                 // user's screen
  optional int32  user_screen_width  = 10;       // The width of the
                                                 // user's screen
  optional string user_geo_country   = 11;       // The user's country
  optional string user_geo_state     = 12;       // The user's state
  optional int32  user_geo_dma       = 13;       // The user's dma
  optional string user_agent         = 14;       // The user's browser, version,
                                                 // and operating system.
  repeated string user_lang          = 15;       // The language preferences set
                                                 // in the user's browser
												   // PUBLISHER related fields
  optional string url                = 16;       // The URL the ad request is
                                                 // coming from.
  optional string http_referer       = 17;       // The HTTP_REFERER for the
                                                 // page generating the ad
                                                 // request
  optional int32  ox_cat_tier_1      = 18;       // The top level category of
                                                 // the page's content.
  optional int32  ox_cat_tier_2      = 19;       // The second level category of
                                                 // the page's content.
  repeated int32  pub_blocked_cat    = 20;       // Ad categories blocked by the
                                                 // publisher on this request
  repeated int32  pub_blocked_content= 21;       // Ad content blocked by the
                                                   // publisher on this request
  repeated int32  pub_blocked_type   = 22;       // Ad types blocked by the
                                                 // publisher on this request
  repeated string pub_blocked_url    = 23;       // Domains that are blocked
                                                 // from the ad's click URL on
                                                 // this request.
}

message BidResponse {
  // ------------------------------------------------------------------------
  // ***    REQUIRED FIELDS                                               ***
  // ------------------------------------------------------------------------
  // These fields are required to be set in the response from the bidder.
  // OPENX identifiers
  required int32  api_version        = 1;  // This value represents the version
                                           // of the API the Market is using
                                           // to communicate with the real-time
                                           // bidder.
                                           // NOTE: this should match the
                                           // version in the BidRequest
  required string auction_id         = 2;  // This is a unique value
                                           // generated by the Market
                                           // and used to identify the
                                           // bid request.
                                           // NOTE: this should match the
                                           // request_id in the BidRequest
  required AdId   matching_ad_id     = 3;  // the id of the matching ad
                                           // selected
  required int64  cpm_bid_micros     = 4;  // The CPM bid expressed in micros.
                                           // Bids must be made in billable
                                           // units (so for USD they must be
                                           // multiples of 10,000).
  // ------------------------------------------------------------------------
  // ***    OPTIONAL FIELDS                                               ***
  // ------------------------------------------------------------------------
  // These fields are optional and may be set by the bidder.
  optional string ad_code            = 5;  // The HTML code to serve if the
                                           // bidder wins the auction.
  optional string click_url          = 6;  // The URL used to populate the
                                             // optional click macro in the
                                           // AD_CODE.
}